Project safety_monitoring {
  database_type: "PostgreSQL"
  Note: "Target schema design for factory, camera, physical-zone, PPE, and zone-incident data. This design is not yet implemented by SQLModel models or migrations. Users support frontend login and report email delivery only. Incident assignment and audit workflow, roles, and permissions are deferred. Behavior violations are deferred until danger behavior detection exists. ppe_violation_subjects already represents workers involved in PPE violations, so no ppe_violated_people table is included."
}

Table factories {
  id bigint [pk, increment]
  name varchar(255) [not null, unique]
  location varchar(500) [note: "Optional human-readable factory location."]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table users {
  id bigint [pk, increment]
  username varchar(255) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(500) [not null]
  display_name varchar(255) [not null]
  department varchar(255)
  receives_reports boolean [not null, default: true]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "Users are for frontend login and report email recipients. Reports can be emailed to active users where receives_reports = true. Incident assignment and audit workflow are deferred. No role or permission model is included in this phase."
}

Table cameras {
  id bigint [pk, increment]
  factory_id bigint [not null]
  name varchar(255) [not null]
  source_key varchar(500) [not null, unique, note: "API video_name maps to this field."]
  source_uri varchar [note: "Nullable source location such as an RTSP URL."]
  calibration_source_points jsonb [note: "Legacy nullable field; BEV calibration is not used by the current API."]
  home_zone_id bigint [note: "Nullable physical zone this camera physically sits in. Incidents recorded by this camera roll up to this zone for analytics; NULL buckets as 'Unassigned'."]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    factory_id
    home_zone_id
  }
}

Table physical_zones {
  id bigint [pk, increment]
  factory_id bigint [not null]
  name varchar(255) [not null]
  zone_type varchar(32) [not null, note: "For example, RESTRICTED or WALKWAY."]
  floor_plan_polygon jsonb [note: "Nullable polygon locating the real area on a factory floor plan."]
  dwell_threshold_seconds integer [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    factory_id
    (factory_id, name)
  }

  Note: "Physical zones represent real factory areas. Reporting and incident history group by physical_zones. dwell_threshold_seconds must be nonnegative."
}

Table camera_zone_views {
  id bigint [pk, increment]
  camera_id bigint [not null]
  physical_zone_id bigint [not null]
  ui_shape_data jsonb [not null, note: "Frontend drawing metadata for this camera view."]
  normalized_coordinates jsonb [not null, note: "Normalized camera-view polygon used by detection."]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    camera_id
    physical_zone_id
    (camera_id, physical_zone_id) [unique]
  }

  Note: "Camera zone views represent how a physical zone appears in a specific camera. Detection uses camera_zone_views.normalized_coordinates. This table implements the many-to-many relationship between cameras and physical_zones."
}

Table ppe_violations {
  id bigint [pk, increment]
  camera_id bigint [note: "Nullable. Set to NULL when the camera is deleted."]
  source_key varchar(500) [note: "Nullable copy of the source/video name."]
  occurred_at timestamptz [not null]
  violation_type varchar(64) [not null]
  details text [not null]
  snapshot_path varchar [note: "Nullable MinIO object key."]
  frame_index integer [note: "Nullable and nonnegative when present."]
  status varchar(32) [not null, default: 'OPEN', note: "Frontend incident display status: OPEN, RESOLVED, or FALSE_POSITIVE. This is not a user workflow field."]
  severity varchar(32) [note: "Nullable severity label for frontend display and reporting."]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    camera_id
    source_key
    occurred_at
    status
  }

  Note: "No assigned, acknowledged, or resolved user tracking is included. Incident assignment and audit workflow are deferred."
}

Table ppe_violation_subjects {
  id bigint [pk, increment]
  ppe_violation_id bigint [not null]
  tracker_id bigint [note: "Nullable tracker ID."]
  person_index integer [note: "Nullable and nonnegative when present."]
  missing_equipment jsonb [not null, note: "JSON array such as [\"Helmet\", \"Vest\"]."]
  bounding_box jsonb [note: "Nullable object with x1, y1, x2, and y2."]
  confidence float [note: "Nullable value from 0 to 1."]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    ppe_violation_id
  }
}

Table zone_violations {
  id bigint [pk, increment]
  camera_id bigint [note: "Nullable historical reference. Set to NULL when the camera is deleted."]
  physical_zone_id bigint [note: "Nullable historical reference. Set to NULL when the physical zone is deleted."]
  camera_zone_view_id bigint [note: "Nullable historical reference to the detection polygon. Set to NULL when the camera-zone view is deleted."]
  zone_name varchar(255) [not null, note: "Copied physical-zone name retained for history."]
  zone_type varchar(32) [not null, note: "Copied physical-zone type retained for history."]
  source_key varchar(500) [not null, note: "Copied camera source identifier retained for history."]
  tracker_id bigint [note: "Nullable tracker ID."]
  occurred_at timestamptz [not null]
  frame_index integer [not null]
  snapshot_path varchar [note: "Nullable MinIO object key."]
  status varchar(32) [not null, default: 'OPEN', note: "Frontend incident display status: OPEN, RESOLVED, or FALSE_POSITIVE. This is not a user workflow field."]
  severity varchar(32) [note: "Nullable severity label for frontend display and reporting."]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    camera_id
    physical_zone_id
    camera_zone_view_id
    source_key
    occurred_at
    status
  }

  Note: "frame_index must be nonnegative. Copied zone and source fields preserve reportable history if referenced configuration is later deleted. No assigned, acknowledged, or resolved user tracking is included; incident assignment and audit workflow are deferred."
}

Table behavior_incidents {
  id bigint [pk, increment]
  camera_id bigint [note: "Nullable historical reference. Set to NULL when the camera is deleted."]
  source_key varchar(500) [note: "Nullable copy of source/video name."]
  behavior_type varchar(64) [not null, note: "FALL_DETECTED, RUNNING_DETECTED, FAINT_DETECTED, COLLAPSE_DETECTED."]
  status varchar(32) [not null, default: 'NEW', note: "NEW, REVIEWED, RESOLVED, FALSE_POSITIVE."]
  severity varchar(32) [default: 'HIGH', note: "LOW, MEDIUM, HIGH, CRITICAL."]
  confidence float [note: "Nullable behavior confidence from 0 to 1."]
  track_id bigint [note: "Nullable primary tracker ID for single-person behavior incidents."]
  frame_start integer [note: "Nullable and nonnegative when present."]
  frame_end integer [note: "Nullable and nonnegative when present."]
  started_at timestamptz [not null]
  ended_at timestamptz
  details text [not null]
  metadata jsonb [not null, default: '{}']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    camera_id
    source_key
    behavior_type
    status
    started_at
  }

  Note: "Behavior incidents are separate from PPE/zone violations. V1 writes only FALL_DETECTED; future running/faint/collapse detections can reuse this table."
}

Table behavior_incident_subjects {
  id bigint [pk, increment]
  behavior_incident_id bigint [not null]
  tracker_id bigint [note: "Nullable tracker ID."]
  person_index integer [note: "Nullable and nonnegative when present."]
  bounding_box jsonb [note: "Nullable object with x1, y1, x2, and y2."]
  confidence float [note: "Nullable value from 0 to 1."]
  keypoints jsonb [note: "Nullable pose keypoint array."]
  features jsonb [note: "Nullable behavior feature vector/explanation."]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    behavior_incident_id
  }
}

Table behavior_evidence {
  id bigint [pk, increment]
  behavior_incident_id bigint [not null]
  evidence_type varchar(32) [not null, default: 'SNAPSHOT']
  object_key varchar(500) [not null, note: "MinIO object key or equivalent storage key."]
  frame_index integer [note: "Nullable and nonnegative when present."]
  occurred_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    behavior_incident_id
    occurred_at
  }
}

Ref: factories.id < cameras.factory_id [delete: restrict]
Ref: physical_zones.id < cameras.home_zone_id [delete: set null]
Ref: factories.id < physical_zones.factory_id [delete: restrict]
Ref: cameras.id < camera_zone_views.camera_id [delete: cascade]
Ref: physical_zones.id < camera_zone_views.physical_zone_id [delete: cascade]
Ref: cameras.id < ppe_violations.camera_id [delete: set null]
Ref: ppe_violations.id < ppe_violation_subjects.ppe_violation_id [delete: cascade]
Ref: cameras.id < zone_violations.camera_id [delete: set null]
Ref: physical_zones.id < zone_violations.physical_zone_id [delete: set null]
Ref: camera_zone_views.id < zone_violations.camera_zone_view_id [delete: set null]
Ref: cameras.id < behavior_incidents.camera_id [delete: set null]
Ref: behavior_incidents.id < behavior_incident_subjects.behavior_incident_id [delete: cascade]
Ref: behavior_incidents.id < behavior_evidence.behavior_incident_id [delete: cascade]
